Option 'shadow_hidden' to shadow hidden files in the view.

--- a/NEWS
+++ b/NEWS
@@ -113,6 +113,9 @@ Changes on 1.2.0 since 1.1.0:
     activation will present icon choose dialog. The implementation was
     partially taken from LXShortcut utility.
 
+* Added 'shadow_hidden' option into config file, defaulted to false,
+    which allows icons of hidden files to be shadowed in view.
+
 
 Changes on 1.1.0 since 1.0.1:
 
