--- a/NEWS
+++ b/NEWS
@@ -116,6 +116,14 @@ Changes on 1.2.0 since 1.1.0:
 * Added 'shadow_hidden' option into config file, defaulted to false,
     which allows icons of hidden files to be shadowed in view.
 
+* Added GFileMonitor implementation for menu:// VFS.
+
+* Added file operations for menu:// VFS, therefore any application which
+    uses libfm can do main menu editing. Supported operations are now:
+    - create new application in any menu folder;
+    - change some application properties (contents of desktop entry);
+    - delete some application from menu.
+
 
 Changes on 1.1.0 since 1.0.1:
 
